cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable day01
    main-is:          Day01.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day03
    main-is:          Day03.hs
    build-depends:    base >=4.14.3.0
                    , containers
                    , megaparsec
    default-language: Haskell2010
    other-modules:    Utils

executable day04
    main-is:          Day04.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day05
    main-is:          Day05.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day06
    main-is:          Day06.hs
    build-depends:    base >=4.14.3.0
    default-language: Haskell2010

executable day07
    main-is:          Day07.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day08
    main-is:          Day08.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day09
    main-is:          Day09.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day10
    main-is:          Day10.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day12
    main-is:          Day12.hs
    build-depends:    base >=4.14.3.0
                    , containers
                    , search-algorithms
    default-language: Haskell2010

executable day13
    main-is:          Day13.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day14
    main-is:          Day14.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
                    , unordered-containers
    default-language: Haskell2010
    other-modules:    Utils

executable day15
    main-is:          Day15.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils
                    , Cuboid

executable day17
    main-is:          Day17.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day18
    main-is:          Day18.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day20
    main-is:          Day20.hs
    build-depends:    base >=4.14.3.0
                    , containers
    default-language: Haskell2010

executable day22
    main-is:          Day22.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day23
    main-is:          Day23.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
 
executable day24
    main-is:          Day24.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
                    , search-algorithms
                    , vector
    default-language: Haskell2010
    other-modules:    Utils 
