cabal-version:   3.0
name:            aoc2024
version:         0.1.0.0
license:         NONE
build-type:      Simple

common config
    ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults
    build-depends:    
          base
        , megaparsec
        , containers
        , unordered-containers        
        , transformers
        , search-algorithms
        , QuickCheck
        , aoclib
        , parser-combinators
        , process
    default-language: Haskell2010
    default-extensions: 
        LambdaCase
        ScopedTypeVariables
        TupleSections
        OverloadedRecordDot

executable day01
    import:  config
    main-is: Day01.hs

executable day02
    import:  config
    main-is: Day02.hs

executable day03
    import:  config
    main-is: Day03.hs

executable day04
    import:  config
    main-is: Day04.hs

executable day05
    import:  config
    main-is: Day05.hs

executable day06
    import:  config
    main-is: Day06.hs

executable day07
    import:  config
    main-is: Day07.hs

executable day08
    import:  config
    main-is: Day08.hs

executable day09
    import:  config
    main-is: Day09.hs

executable day10
    import:  config
    main-is: Day10.hs

executable day11
    import:  config
    main-is: Day11.hs

executable day12
    import:  config
    main-is: Day12.hs

executable day13
    import:  config
    main-is: Day13.hs

executable day14
    import:  config
    main-is: Day14.hs
