cabal-version:   3.0
name:            aoc2025
version:         0.1.0.0
license:         NONE
build-type:      Simple

common config
    ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults
    build-depends:
          base
        , megaparsec
        , containers
        , unordered-containers
        , transformers
        , search-algorithms
        , QuickCheck
        , aoclib
        , parser-combinators
        , process
        , random
        , memoize
    default-language: Haskell2010
    default-extensions:
        LambdaCase
        ScopedTypeVariables
        TupleSections
        OverloadedRecordDot

executable day01
    import:  config
    main-is: Day01.hs

executable day02
    import:  config
    main-is: Day02.hs

executable day03
    import:  config
    main-is: Day03.hs

executable day04
    import:  config
    main-is: Day04.hs

executable day05
    import:  config
    main-is: Day05.hs
