cabal-version:   3.0
name:            aoclib
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Graph
                    , Utils
                    , PairingHeap
                    , Cuboid
    build-depends:    
          base
        , megaparsec
        , containers
        , unordered-containers        
        , transformers
        , search-algorithms
        , QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: 
        LambdaCase
        ScopedTypeVariables
        TupleSections

test-suite test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        QuickCheck,
        aoclib,
        containers
    default-extensions: 
        LambdaCase
        ScopedTypeVariables
        TupleSections
